styles.css
body {
    background-color: hsl(235, 18%, 26%);
    margin: 0;
    font-family: 'Roboto', sans-serif;
    box-sizing: border-box;
}

p {
    font-size: 16px;
}

h1 {
    font-size: 3.5rem;
    color: hsl(235, 18%, 26%);
}



/* START */


.signupstart {
    background-color: hsl(0, 0%, 100%);
    border-radius: 25px;
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    padding: 20px;
    
    display: flex;
    justify-content: space-between;

}

.left {
    display: flex;
    flex-direction: column;
    
    width: 40%;
    padding: 0 50px 0 50px;

    justify-content:center;
    
}

.left > h1 {
    margin: 0;
}

@media screen and (max-width: 600px) {

    .signupstart {
        background-color: hsl(0, 0%, 100%);        
        display: flex;
        width: 100vw;
        height: 100vh;
        flex-direction: column-reverse;
        align-items: center;
        padding: 0;
        border-radius: 0;
        transform: none;
        top: 0%;
        left: 0%;
        justify-content:start;
    }



    .right {
        height: 30vh;
    }
    .right > img {
        height: 50%;
        width: 100vw;
    }
    
}


/* uses background image for bullet points to fix alignment issues */
.left > ul {
    list-style-type: none;
    padding-left: 0;
}

.left > ul > li {
    padding-left: 2.5rem;
    background-image: url('./assets/images/icon-list.svg');
    background-position: 0 0;
    background-repeat: no-repeat;
    height: 25px;
    margin: 10px 0 10px 0;
}

.left > form {
    display: flex;
    text-align: center;
    flex-direction: column;  
}
/*  */


/* FOR 2 LABELS ON THE SAME LINE, WRAP THEM IN A SINGLE LABEL FOR 3 TOTAL LABELS */
.label1 {
    text-align: left;
    font-size: small;
    font-weight: bold;
    float:left;
    padding: 0 0 5px 1px;
    
}

.label2 {
    visibility: hidden;
    color: red;
    text-align: right;
    float: right;
    font-size: small;
    font-weight: bold;
    padding: 0 0 5px 1px;

}
/*  */

/* FORM */
.left > form > input {
    width: 100%;
    height: 50px;
    padding-left: 20px;
    border: 1px solid hsl(231, 7%, 60%);
    border-radius: 5px;
    box-sizing: border-box;
    

}

.newbutton {
    width: 100%;
    height: 50px;
    border-radius: 5px;
    color: white;
    background-color: hsl(234, 29%, 20%);
    border: none;
    margin-top: 20px;
    transition: all 1s ease-in-out;
}

.newbutton:hover {
    background-image: linear-gradient(to right, rgb(255, 81, 110), rgb(255, 136, 0));
}
/*  */

/* Image */
.right {
    display: flex;
}

.right > img {
    max-width: 100%;
    height: auto;
}
/*  */


/* ************************************* */
/* Success page */

.success {
    background-color: hsl(0, 0%, 100%);
    border-radius: 25px;
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    padding: 50px 60px 50px 60px;
    width: 20%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    text-align: left;
}

.success > img {
    height: 60px;
    width: 60px;
    padding-bottom: 30px;
}

.successh1 {
    margin: 0;
}

.success > p {
    line-height: 25px;
}

.useremail {
    content: "hello";
}

#idemail {
    font-weight: bold;
}

